# CmakeToy

./: .gitignore  README.md
basic/: README.md
basic/toy01/: CMakeLists.txt
basic/toy02/: main  main.cpp
basic/toy03/: CMakeLists.txt
ch01/: CMakeLists.txt  CMakePresets.json  MyCppCode
ch01/MyCppCode.dSYM/Contents/Resources/DWARF/: MyCppCode
ch01/MyCppCode.dSYM/Contents/Resources/Relocations/aarch64/: MyCppCode.yml
modern-cmake/example/: README.md
modern-cmake/example/simple-project/: CMakeLists.txt  simple_example.cpp  simple_lib.cpp
ros/: README.md
ros-projects/: README.md
ros-projects/example/proj1/: CMakeLists.txt  package.xml
ros-projects/example/proj1/src/: subscriber.cpp  subscriber_turtle_pose_function.cpp
ros-projects/example/proj1/src/turtlesim_listen/: subscriber_turtle_pose_function.cpp
ros/example/proj1/: CMakeLists.txt  package.xml
toy01/: CMakeLists.txt  HelloWorld
toys/: README.md
toys/toy02/: CMakeLists.txt
tutorial/step1/: CMakeLists.txt  tutorial.cxx
tutorial/step2/: CMakeLists.txt  tutorial.cxx
tutorial/step2/MathFunctions/: MathFunctions.cxx  MathFunctions.h  mysqrt.cxx  mysqrt.h
